overflow bugfix

--- a/biostar/static/biostar.base.less
+++ b/biostar/static/biostar.base.less
@@ -677,8 +677,7 @@ div#navbar {
 }
 
 .content {
-  overflow: scroll;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .context {
